--- a/www/src/main/resources/templates/chungbuk.html
+++ b/www/src/main/resources/templates/chungbuk.html
@@ -73,7 +73,7 @@
 
 
   <!-- 폼 제출 버튼 -->
-    <button type="submit" class="submit-button">Submit</button>
+    <button type="submit" class="submit-button">다음</button>
 </form>
 
 <script>
