--- a/www/src/main/resources/templates/member/update.html
+++ b/www/src/main/resources/templates/member/update.html
@@ -34,7 +34,7 @@
       
       <input name="accounts_idx" th:value="${session.user.accounts_idx}" type="hidden">
       
-      <button>modify</button>
+      <button>수정</button>
    </form>
     
     
