--- a/www/src/main/resources/templates/member/ann_search.html
+++ b/www/src/main/resources/templates/member/ann_search.html
@@ -3,13 +3,19 @@
 <head>
     <title>Search Results</title>
     <link rel="stylesheet" href="/css/mainStyle.css">
-    <link rel="stylesheet" href="/css/annsearchStyle.css">
+    <link href="/css/qnaviewStyle.css" rel="stylesheet">
 </head>
 <body>
 <th:block th:replace="/fragment::header"></th:block>
-    <h2>검색 결과</h2>
+    <div class="container0">
+		<div class="contents0" style="min-height: 680px;">
 
-    <table class="rwd-table">
+<h1>검색 결과</h1>
+<p>
+				검색어: <span th:text="${keyword}"></span>
+			</p>
+
+    <table>
         <thead>
             <tr>
                 <th>No.</th>
@@ -29,6 +35,14 @@
             </tr>
         </tbody>
     </table>
+
+<div id="buttons">
+  <button onclick="history.go(-1);">뒤로가기</button>
+
+  </div>
+		</div>
+	</div>
+
     <th:block th:replace="/fragment::footer"></th:block>
 </body>
 </html>
