--- a/www/src/main/resources/templates/jeonbuk.html
+++ b/www/src/main/resources/templates/jeonbuk.html
@@ -78,7 +78,7 @@
   <button type="button" id="button14" class="checkbox-button">진안</button>
 
   <!-- 폼 제출 버튼 -->
-    <button type="submit" class="submit-button">Submit</button>
+    <button type="submit" class="submit-button">다음</button>
 </form>
 
 <script>
