--- a/www/src/main/resources/templates/member/index.html
+++ b/www/src/main/resources/templates/member/index.html
@@ -133,9 +133,9 @@
 					map : map,
 					path : path,
 					strokeWeight : 5, // 두께
-					strokeColor : '#FF0000', // 색깔
+					strokeColor : 'red', // 색깔
 					strokeOpacity : 0.7, // 불투명도
-					strokeStyle : 'solid' // 선 스타일
+					strokeStyle : 'dash' // 선 스타일
 				});
 			}
 		}
