--- a/www/src/main/resources/templates/place/travelplan.html
+++ b/www/src/main/resources/templates/place/travelplan.html
@@ -11,7 +11,7 @@
 	<th:block th:replace="/fragment::header"></th:block>
     
     <div id="accom">
-    <h1>내 여행</h1>
+    <h1>내 여행계획</h1>
 	
 
         
