--- a/www/src/main/resources/templates/place/travelplandetail.html
+++ b/www/src/main/resources/templates/place/travelplandetail.html
@@ -153,7 +153,7 @@ function openTab(evt, tabName, day, seldate) {
                 const polyline = new kakao.maps.Polyline({
                     path: linePath, // 경로 배열
                     strokeWeight: 3, // 선의 두께
-                    strokeColor: '#4CAF50', // 선의 색상
+                    strokeColor: 'red', // 선의 색상
                     strokeOpacity: 0.8, // 선의 불투명도
                     strokeStyle: 'dash' // 선의 스타일 (점선)
                 });
