--- a/www/src/main/resources/templates/chungnam.html
+++ b/www/src/main/resources/templates/chungnam.html
@@ -81,7 +81,7 @@
   <button type="button" id="button15" class="checkbox-button">계룡</button>
   
   <!-- 폼 제출 버튼 -->
-    <button type="submit" class="submit-button">Submit</button>
+    <button type="submit" class="submit-button">다음</button>
 </form>
 
 <script>
