--- a/www/src/main/resources/templates/gyeonggi.html
+++ b/www/src/main/resources/templates/gyeonggi.html
@@ -129,7 +129,7 @@
   <button type="button" id="button31" class="checkbox-button">의정부</button>
 
   <!-- 폼 제출 버튼 -->
-    <button type="submit" class="submit-button">Submit</button>
+    <button type="submit" class="submit-button">다음</button>
 </form>
 
 <script>
