--- a/www/src/main/resources/templates/gyeongnam.html
+++ b/www/src/main/resources/templates/gyeongnam.html
@@ -90,7 +90,7 @@
   <button type="button" id="button18" class="checkbox-button">합천</button>
 
   <!-- 폼 제출 버튼 -->
-    <button type="submit" class="submit-button">Submit</button>
+    <button type="submit" class="submit-button">다음</button>
 </form>
 
 <script>
